@@ -6,6 +6,7 @@ Feedback x.x-x.x, xxxx-xx-xx
 
 Feedback 6.x-2.x, xxxx-xx-xx
 ----------------------------
+by sun: Fixed JS behaviors are executed more than once.
 by sun: Back-ported some minor clean-ups from D7.
 #636158 by smk-ka: Changed administrative page callbacks to be located in admin
   include.
